# avater_voice

./: LICENSE  README.md
infer/: inference.py  inference_debug.py  inference_vllm.py  pyproject.toml
infer/avatar_infer/: cache_utils.py  generation_utils.py  modeling_outputs.py  modeling_utils.py  utils.py
infer/avatar_infer/dataclass/: outputs.py  sequence.py
infer/avatar_infer/generation/: __init__.py  avatar_llm.py  patch.py  sequence.py  text_generator.py  voice_generator.py
infer/avatar_infer/models/: patcher.py
infer/avatar_infer/models/voice/: __init__.py  asr_adapter.py  base_voice.py  configuration_voice.py  tokenization_voice.py  tts_adapter.py
infer/avatar_infer/models_vllm/attention/: __init__.py
infer/avatar_infer/models_vllm/layers/: attention.py  sample.py  sampler.py
infer/avatar_infer/models_vllm/voice/: llama_voice.py  tts_adapter.py
infer/avatar_infer/processor/: avatar_step.py
infer/avatar_infer/worker/: avatar_cache_engine.py  avatar_llm_engine.py  avatar_model_runner.py  avatar_scheduler.py  forward_avatar_context.py  patch.py
infer/avater_infer/: cache_utils.py  modeling_outputs.py  modeling_utils.py
infer/avater_infer/generation/: __init__.py  base.py  sample.py  sample_llm.py  samples.py  text_generator.py  utils.py  voice_generator.py
infer/avater_infer/models/: patcher.py
infer/avater_infer/models/llama/: __init__.py  configuration_voice.py  tokenization_voice.py  tts_adapter.py
infer/avater_infer/models/voice/: __init__.py  asr_adapter.py  base_voice.py  configuration_voice.py  tokenization_voice.py  tts_adapter.py
infer/avater_infer/models_vllm/voice/: llama_voice.py  tts_adapter.py
model/llama_tts/: README.md  config.json  configuration_llama_tts.py  modeling_llama_tts.py  tokenization_avater.py  tokenization_llama_tts.py  tokenizer_config.json
model/llama_tts_8B/: config.json  configuration_llama_tts.py  generation_config.json  modeling_llama_tts.py  pyrightconfig.json  tokenization_avater.py  tokenizer_config.json
model/llama_tts_adapter/: configuration_llama_tts_adapter.py
models/llama_asr/: config.json  configuration_llama_asr.py  generation_config.json  modeling_llama_asr.py  tokenization_llama_asr.py  tokenizer_config.json
models/llama_tts/: config.json  configuration_llama_tts.py  modeling_llama_tts.py  tokenization_llama_tts.py  tokenizer_config.json
models/llama_voice/: config.json  configuration_llama_voice.py  generation_config.json  modeling_llama_voice.py  tokenization_llama_voice.py  tokenizer_config.json
scripts/: load_asr_encoder.py  load_dataset.py  load_model.py
scripts/dataset/: __init__.py  data_attr.py  data_utils.py  template_feb.py
scripts/tts_adapter/: inference.py  load_dataset.py  load_model.py  test_forward.py
scripts/tts_adapter/schema/: __init__.py  data_attr.py  data_role.py
tokenizer/audio/moshi_mimi/: README.md  pyproject.toml
tokenizer/audio/moshi_mimi/mimi/: __init__.py  base.py  encoder.py  model.py
tokenizer/audio/moshi_mimi/mimi/module/: seanet_block.py
tokenizer/audio/moshi_mini/: README.md  pyproject.toml
tokenizer/audio/moshi_mini/mini/: base.py  decoder.py  encoder.py  model.py
tokenizer/audio/moshi_mini/mini/module/: conv.py  seanet_block.py  transformer.py
tokenizer/moshi_mimi/: README.md  pyproject.toml
tokenizer/moshi_mimi/mimi/: decoder.py
tokenizer/text/llama3.1/: config.json  generation_config.json  special_tokens_map.json  tokenizer_config.json  training_params.json
