[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "avater_infer"
version = "0.0.1"
description = "the inference server for avater"
readme = "README.md"
authors = [{name = "Licheng Wang", email = "licheng.wang@vropco.ao"}]
requires-python = ">=3.10.14"
dependencies = [
    "transformers==4.46.1",
    "torch==2.4.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["avater_infer*"]
exclude = ["tests*"] 

[tool.setuptools.package-data]
"avater_infer" = ["py.typed", "*.pyi", "**/*.pyi"]
