[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "avater_infer"
version = "0.0.1"
description = "the inference server for avater"
readme = "README.md"
authors = [{name = "Licheng Wang", email = "licheng.wang@vropco.ao"}]
requires-python = ">=3.10.14"
dependencies = [
    "transformers==4.48.2",
    "torch==2.5.1",
    "vllm==0.7.3",
    "soundfile",
    "whisper"
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["avater_infer*"]
exclude = ["tests*"] 

[tool.setuptools.package-data]
"avater_infer" = ["py.typed", "*.pyi", "**/*.pyi"]
