[project]
name = "moshi_mimi"
version = "0.0.1"
description = "the audio tokenizer of Moshi"
readme = "README.md"
authors = [{name = "Laurent Mazaré", email = "laurent@kyutai.org"}]
requires-python = ">=3.10.14"
dependencies = [
    "descript-audiotools>=0.7.2",
    "numpy>=1.26, <2.2",
    "safetensors>=0.4.0, <0.5", 
    "huggingface-hub>=0.24, <0.25",
    "einops>=0.7",
    "sentencepiece>=0.2",
    "sounddevice>=0.5",
    "sphn >= 0.1.4",
    "torch>=2.2.0, <2.5",
    "aiohttp>=3.10.5, <3.11"
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.2"
]

[tool.setuptools.dynamic]
version = {attr = "moshi_mimi.__version__"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
